--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,33 @@
     width: 100%;
     height: 100%;
 }
-body {
-    background-color: cyan;
-}
+
 .opis {
     text-align: center;
     font-size: 1.5em;
+}
+.test {
+    display: flex;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 10px;
+}
+body {
+    background-color: cyan;
+}
+
+#position-test {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100vh;
+}
+
+#position-absolute {
+    background-color: red;
 }
