--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,19 @@ body {
 #position-absolute {
     background-color: red;
 }
+.nowe {
+    position: relative;
+    font-size: 20px;
+    align-items: center;
+    text-align: left;
+    background-color: red;
+    color: black;
+    width: 30vh;
+    height: 30vh;
+}
+
+.cosik {
+    width: auto;
+    height: 40%;
+    left: 10px;
+}
